fix name product overflow

--- a/stype.scss
+++ b/stype.scss
@@ -153,6 +153,11 @@ $bg-grey:#eee;
                 padding: 0px .25rem;
                 &:last-child {
                     margin-top: .5rem;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    display: -webkit-box;
                     &:hover {
                         font-weight: 900;
                     }
